Implemented GLobal  Exception Handling